# ai-litter

./: .gitignore  .gitmodules  Makefile
.github/workflows/: android-apk-release.yml  android-play-release.yml  ios-testflight.yml  mac-direct-dist.yml  mac-testflight.yml  mobile-ci.yml  mobile-release.yml
apps/android/app/: build.gradle.kts
apps/android/core/bridge/: build.gradle.kts
apps/android/core/bridge/src/main/cpp/: CMakeLists.txt  ghostty_jni.cpp
apps/android/scripts/: download-alpine-fs.sh
apps/ios/: project.yml
apps/ios/Litter.xcodeproj/: project.pbxproj
apps/ios/Sources/Litter/: LitterApp.swift
apps/ios/Sources/LitterWatch/: LitterWatchApp.swift
apps/ios/Sources/LitterWatchComplications/: LitterCircularComplication.swift  LitterComplicationEntry.swift  LitterComplicationProvider.swift  LitterCornerComplication.swift  LitterRectangularComplication.swift  LitterServerListPayload.swift  ServerSelectionIntent.swift
apps/ios/Tests/LitterTests/: AppSnapshotRuntimeTests.swift  HomeDashboardSupportTests.swift  PerServerComplicationTests.swift  WatchAppStoreHydrationTests.swift  WatchCompanionBridgeTests.swift  WatchSizeTests.swift  WatchThemePayloadTests.swift
apps/ios/scripts/: build-ghostty.sh  build-rust.sh  sync-ghostty.sh
docs/releases/: testflight-whats-new.md
patches/codex/: README.md
patches/ghostty/: litter-mobile-embed.patch
shared/rust-bridge/codex-mobile-client/: Cargo.toml
shared/rust-bridge/codex-mobile-client/src/: alleycat.rs  lib.rs  (+5 more)
tools/scripts/: build-android-rust.sh  build-ghostty-android.sh  build-proot-android.sh
(+96 files in other folders)
